--- a/solution/temp-converter-processor/src/main/resources/application.yml
+++ b/solution/temp-converter-processor/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
       bindings:
         input:
           destination: converter.processor
-          group: group
+          group: v1
         output_sensor1:
           destination: converter/processor/sensor1
         output_sensor2:
