--- a/templates/temp-converter-sink/pom.xml
+++ b/templates/temp-converter-sink/pom.xml
@@ -27,12 +27,8 @@
   </properties>
 
   <dependencies>
-    <dependency>
-        <groupId>com.solace.spring.cloud</groupId>
-        <artifactId>spring-cloud-starter-stream-solace</artifactId>
-        <version>1.0.0</version>
-    </dependency>
-
+  	<!-- TODO: Add Solace Spring Cloud Stream binder and app data model dependencies here -->
+  
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-stream-reactive</artifactId>
@@ -43,13 +39,7 @@
       <artifactId>spring-boot-devtools</artifactId>
       <optional>true</optional>
     </dependency>
-    
-	<dependency>
-		<groupId>com.solace.workshop.demo.datamodel</groupId>
-		<artifactId>temp-converter-datamodel</artifactId>
-		<version>0.0.1.BUILD-SNAPSHOT</version>	
-	</dependency>    
-    
+        
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-stream-test-support</artifactId>
