--- a/solution/temp-converter-processor/src/main/resources/application.yml
+++ b/solution/temp-converter-processor/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
         input:
           destination: converter.processor
           group: v1
-        output_sensor1:
+        outputSensor1:
           destination: converter/processor/sensor1
-        output_sensor2:
+        outputSensor2:
           destination: converter/processor/sensor2
       binders:
         local_solace:
