--- a/solution/temp-converter-processor/src/main/resources/application.yml
+++ b/solution/temp-converter-processor/src/main/resources/application.yml
@@ -5,11 +5,11 @@ spring:
       bindings:
         input:
           destination: converter.processor
-          group: v1
+          group: WORKSHOP_USER
         outputSensor1:
-          destination: converter/processor/sensor1
+          destination: WORKSHOP_USER/converter/processor/sensor1
         outputSensor2:
-          destination: converter/processor/sensor2
+          destination: WORKSHOP_USER/converter/processor/sensor2
       binders:
         local_solace:
           type: solace
@@ -28,7 +28,7 @@ spring:
         bindings:
           input:
             consumer:
-              queueAdditionalSubscriptions: converter/source
+              queueAdditionalSubscriptions: WORKSHOP_USER/converter/source
               autoBindDmq: true
 logging:
   level:
