--- a/solution/temp-converter-source/src/main/resources/application.yml
+++ b/solution/temp-converter-source/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     stream:
       bindings:
         output:
-          destination: converter/source
+          destination: WORKSHOP_USER/converter/source
           binder: solace
 logging:
   level:
