--- a/templates/temp-converter-processor/src/main/resources/application.yml
+++ b/templates/temp-converter-processor/src/main/resources/application.yml
@@ -5,11 +5,11 @@ spring:
       bindings:
         input:
           destination: [PROCESSOR_QUEUE_NAME]
-          group: v1
+          group: [STUDENT_ID]
         outputSensor1:
-          destination: [PROCESSOR_SENSOR1_TOPIC]
+          destination: [STUDENT_ID]/[PROCESSOR_SENSOR1_TOPIC]
         outputSensor2:
-          destination: [PROCESSOR_SENSOR2_TOPIC]
+          destination: [STUDENT_ID]/[PROCESSOR_SENSOR2_TOPIC]
       binders:
         local_solace:
           type: solace
@@ -25,7 +25,7 @@ spring:
         bindings:
           input:
             consumer:
-              queueAdditionalSubscriptions: [PROCESSOR_SUBSCRIPTION]
+              queueAdditionalSubscriptions: [STUDENT_ID]/[PROCESSOR_SUBSCRIPTION]
               # Add DMQ configuration here
 logging:
   level:
