--- a/templates/temp-converter-sink/src/main/resources/application.yml
+++ b/templates/temp-converter-sink/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
         input:
           destination: converter.sink
           binder: local_solace
-          group: v1
+          group: [STUDENT_ID]
       binders:
         local_solace:
           type: solace
@@ -20,7 +20,7 @@ spring:
         bindings:
           input:
             consumer:
-              queueAdditionalSubscriptions: [SINK_SUBSCRIPTIONS]
+              queueAdditionalSubscriptions: [STUDENT_ID]/[SINK_SUBSCRIPTIONS]
 logging:
   level:
     com.solacesystems.jcsmp: INFO
